Mon Aug 10 17:46:12 UTC 2009  William R. Otte  <Wotte@dre.vanderbilt.edu>

        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.h:
        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp:
        * DAnCE/DomainApplicationManager/Node_Locator.cpp:
        * DAnCE/ExecutionManager/ExecutionManager_Module.h:
        * DAnCE/ExecutionManager/ExecutionManager_Module.cpp:
        * DAnCE/NodeApplication/NodeApplication_Impl.cpp:
        * DAnCE/NodeManager/Node_Manager_Module.h:
        * DAnCE/NodeManager/Node_Manager_Module.cpp:
        * DAnCE/Plan_Launcher/Plan_Launcher_Base_Impl.cpp:
        * DAnCE/Plan_Launcher/Plan_Launcher_Impl.h:
        * DAnCE/Plan_Launcher/Plan_Launcher_Impl.cpp:
        * DAnCE/RepositoryManager/repository_manager_admin.cpp:
        * DAnCE/TargetManager/Target_Manager_Module.h:
        * DAnCE/TargetManager/Target_Manager_Module.cpp:
        * DAnCE/tests/CIAO/ExecutionManager-Deployments/simple_em_launcher.cpp:
        * DAnCE/tests/CIAO/NodeManager-Deployments/simple_nm_launcher.cpp:
        * DAnCE/tests/DeploymentPlanDump/test.cpp:
        * DAnCE/tests/DeploymentPlanTestReferences/test.cpp:
        * DAnCE/tests/DeploymentTest1/test.cpp:
        * ciao/Containers/Session/Session_Container.cpp:
        * ciao/Logger/File_Logger_Backend.cpp:
        * tests/CIAO_ComponentServer/Activator/client.cpp:
        * tests/IDL3_to_XMI/IDL2XMI_Test/XML_Helper.cpp:
        * tools/Config_Handlers/ADD_Handler.cpp:
        * tools/Config_Handlers/Any_Handler.cpp:
        * tools/Config_Handlers/Basic_Deployment_Data.hpp:
        * tools/Config_Handlers/Basic_Deployment_Data.cpp:
        * tools/Config_Handlers/CCD_Handler.cpp:
        * tools/Config_Handlers/CEPE_Handler.cpp:
        * tools/Config_Handlers/CPD_Handler.cpp:
        * tools/Config_Handlers/CRDD_Handler.cpp:
        * tools/Config_Handlers/Common.h:
        * tools/Config_Handlers/ComponentPropertyDescription_Handler.cpp: